apps/nginx/post-install/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx
  namespace: default
  labels:
    app: nginx
    app.kubernetes.io/name: nginx
    app.kubernetes.io/part-of: nginx
    app.kubernetes.io/instance: nginx
    app.kubernetes.io/component: nginx
spec:
  replicas: 0
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
  template:
    metadata:
      labels:
        app: nginx
        app.kubernetes.io/name: nginx
        app.kubernetes.io/part-of: nginx
        app.kubernetes.io/instance: nginx
        app.kubernetes.io/component: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.31.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          resources:
            requests:
              memory: "64Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false # prevent sudo, etc.
            privileged: false               # prevent acting like host root
            capabilities:
              drop: [ALL]
              add: [NET_BIND_SERVICE]  # Required for ports <1024 (e.g., 80/443)
          volumeMounts:
            - mountPath: /var/cache/nginx
              name: nginx-cache
            - mountPath: /var/run
              name: nginx-run
            - mountPath: /tmp
              name: nginx-tmp
      volumes:
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
        - name: nginx-tmp
          emptyDir: {}
      securityContext:
        seccompProfile:
          type: RuntimeDefault   # enable seccomp and the runtimes default profile
        runAsUser: 101          # hardcode user to non-root if not set in Dockerfile
        runAsGroup: 101         # hardcode group to non-root if not set in Dockerfile
        runAsNonRoot: true       # hardcode to non-root. Redundant to above if Dockerfile is set USER 1000
        fsGroup: 101          # hardcode fsGroup to non-root if not set in Dockerfile
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nginx
              topologyKey: kubernetes.io/hostname
