apps/nginx/post-install/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
  labels:
    app: nginx
    app.kubernetes.io/name: nginx
    app.kubernetes.io/part-of: nginx
    app.kubernetes.io/instance: nginx
    app.kubernetes.io/component: nginx
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.nginx.local.asztalos.net`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: traefik
        - name: default-headers
          namespace: traefik
      services:
        - name: nginx
          namespace: default
          port: 80
    - match: Host(`nginx.local.asztalos.net`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: traefik
        - name: default-headers
          namespace: traefik
      services:
        - name: nginx
          namespace: default
          port: 80
  tls:
    secretName: local-asztalos-net-tls
